--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10750,9 +10750,10 @@ textarea.form-control-lg {
   }
 }
 .main-header {
-  padding-top: 45px;
+  padding-top: 10px;
   transition: all 0.5s ease;
   z-index: 99;
+  background-color: #001C68;
 }
 .main-header .search {
   max-width: 140px;
